<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:padding="50dp"
		android:layout_gravity="center"
		android:background="@color/colorPrimary"
		tools:context=".MainActivity">

	<EditText
			android:id="@+id/uname"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawableStart="@drawable/person_icon"
			android:drawableLeft="@drawable/person_icon"
			android:drawablePadding="5dp"
			android:hint="@string/username"
			android:importantForAutofill="no"
			android:inputType="text"
			android:textSize="20sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_bias="0.505"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.257" />

	<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="40dp"
			android:drawableLeft="@drawable/lock_icon"
			android:drawablePadding="5dp"
			android:ems="10"
			android:hint="@string/password"
			android:importantForAutofill="no"
			android:inputType="textPassword"
			android:textSize="20sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.505"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/uname"
			android:drawableStart="@drawable/lock_icon" />

	<Button
			android:id="@+id/loginBtn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="188dp"
			android:background="@drawable/rndbtn"
			android:text="@string/Log_in"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.505"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/password"
			app:layout_constraintVertical_bias="1.0" />

	<TextView
			android:id="@+id/signUp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="104dp"
			android:layout_marginBottom="64dp"
			android:text="@string/not_a_registered_user_click_here_to_register"
			android:textSize="15sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.676"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>